# system-monitor

./: CMakeLists.txt  Makefile
include/: linux_parser.h  process.h  processor.h  system.h
src/: CMakeLists.txt  format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
tests/: CMakeLists.txt  test_format.cpp  test_linux_parser.cpp
tests/assets/: meminfo  passwd  stat  uptime  version
tests/assets/processes/12944/: cmdline  stat  status
tests/assets/processes/56230/: cmdline  stat  status
